--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,6 +1,10 @@
+image: proboci/ubuntu-14.04-lamp:php7.1
+
+allowAccessWhileBuilding: true
+
 assets:
   - d7testsite.sql.gz
-allowAccessWhileBuilding: true
+
 steps:
   - name: Probo site setup
     plugin: Drupal
