--- a/.probo.yaml
+++ b/.probo.yaml
@@ -29,4 +29,4 @@ steps:
     plugin: Script
     script:
       - curl -X POST -H Content-Type:application/x-www-form-urlencoded -H Cache-Control:no-cache -d
-          'url=$BUILD_DOMAIN&key=5af62f9909783f976e38fb8c6e2faffd' https://tenon.io/api/
+          "url=$BUILD_DOMAIN&key=5af62f9909783f976e38fb8c6e2faffd" https://tenon.io/api/
